# GLBW

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.bak
.github/workflows/: build.yml  release.yml
cmake/: GLBWConfig.cmake
demo/: main.c
docs/: index.md  test.txt
docs/html/: def_8h.html  def_8h_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_875ea01f4d9c4cc0c4538597efebc76c.html  dir_bedfbe20c9cdc5142974202ef3aa4cd5.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  glbw_8h.html  glbw_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  index_8md.html  win_8h.html  win_8h_source.html
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  defines_0.js  files_1.js  functions_0.js  pages_0.js  pages_1.js  pages_3.js  pages_4.js  searchdata.js  typedefs_0.js
include/GLBW/: glbw.h  test.h
include/GLBW/Core/: def.h  win.h
src/: error.c  error.h  glbw.c  state.c  state.h  test.c  window.c  window.h
